<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>cz.bliksoft.java</groupId>
	<artifactId>common-java-utils</artifactId>
	<version>0.6-SNAPSHOT</version>
	<name>BSToolbox</name>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>8</java.version>
	</properties>

	<distributionManagement>
		<repository>
			<id>bliksoft-private</id>
			<url>https://mvn.bliksoft.cz/private</url>
		</repository>
		<snapshotRepository>
			<id>bliksoft-private-snapshots</id>
			<url>https://mvn.bliksoft.cz/private-snapshots</url>
		</snapshotRepository>
	</distributionManagement>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<release>8</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.3.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<configuration>
					<outputDirectory>${project.build.directory}/lib</outputDirectory>
					<excludeTransitive>false</excludeTransitive>
					<stripVersion>false</stripVersion>
				</configuration>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- Add LIB folder to classPath -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>lib/</classpathPrefix>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>io.github.git-commit-id</groupId>
				<artifactId>git-commit-id-maven-plugin</artifactId>
				<version>4.9.9</version>
				<executions>
					<execution>
						<id>get-the-git-infos</id>
						<goals>
							<goal>revision</goal>
						</goals>
					</execution>
					<execution>
						<id>validate-the-git-infos</id>
						<goals>
							<!--<goal>validateRevision</goal>-->
						</goals>
						<phase>deploy</phase>
					</execution>
				</executions>
				<configuration>
					<useNativeGit>true</useNativeGit>
					<!--
					<dotGitDirectory>${project.basedir}/.git</dotGitDirectory> -->
					<generateGitPropertiesFile>true</generateGitPropertiesFile>
					<offline>false</offline>
					<generateGitPropertiesFilename>
						${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
					<commitIdGenerationMode>full</commitIdGenerationMode>
					<validationProperties>
						<validationProperty>
							<name>validating project version</name>
							<value>${project.version}</value>
							<shouldMatchTo>
								<![CDATA[^.*(?<!-SNAPSHOT)$]]>
							</shouldMatchTo>
						</validationProperty>
						<validationProperty>
							<name>validating git dirty</name>
							<value>${git.dirty}</value>
							<shouldMatchTo>false</shouldMatchTo>
						</validationProperty>
					</validationProperties>
					<includeOnlyProperties>
						<includeOnlyProperty>^git.build.(time|version)$</includeOnlyProperty>
						<includeOnlyProperty>^git.commit.id.(abbrev|full)$</includeOnlyProperty>
						<includeOnlyProperty>git.branch</includeOnlyProperty>
						<includeOnlyProperty>git.closest.tag.commit.count</includeOnlyProperty>
						<includeOnlyProperty>git.closest.tag.name</includeOnlyProperty>
						<includeOnlyProperty>git.tags</includeOnlyProperty>
						<includeOnlyProperty>git.dirty</includeOnlyProperty>
					</includeOnlyProperties>
				</configuration>
			</plugin>
			<!-- <plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.7.0</version>
				<executions>
					<execution>
						<goals>
							<goal>javadoc</goal>
						</goals>
						<id>execution1</id>
						<phase>package</phase>
					</execution>
				</executions>
			</plugin> -->
			<!-- <plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.1</version>
				<executions>
					<execution>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
						<id>attach-sources</id>
						<phase>package</phase>
					</execution>
				</executions>
			</plugin> -->
		</plugins>
	</build>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>cz.bliksoft.java</groupId>
				<artifactId>dependency-management</artifactId>
				<version>1.8.1-SNAPSHOT</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>cz.bliksoft.java</groupId>
			<artifactId>dependency-management-freemarker</artifactId>
			<type>pom</type>
			<scope>provided</scope>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>cz.bliksoft.java</groupId>
			<artifactId>dependency-management-service</artifactId>
			<type>pom</type>
			<scope>provided</scope>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>cz.bliksoft.java</groupId>
			<artifactId>dependency-management-log4j</artifactId>
			<type>pom</type>
			<scope>provided</scope>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>jakarta.mail</artifactId>
			<scope>provided</scope>
			<optional>true</optional>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.google.zxing/core -->
		<dependency>
			<groupId>com.google.zxing</groupId>
			<artifactId>core</artifactId>
			<scope>provided</scope>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.apache.httpcomponents.client5</groupId>
			<artifactId>httpclient5</artifactId>
			<scope>provided</scope>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<scope>provided</scope>
			<optional>true</optional>
		</dependency>
	</dependencies>
</project>